--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,11 @@ html, body, #root{
 }
 
 .app{
-  background-color: antiquewhite;
+  background-image: url(./images/Bigstock-22321633-Spa-still-life-with-bamboo-fountain-and-zen-stone.jpg);
+  /* background-image: url(./images/sandrocks.webp); */
+  /* background-image: url(./images/flowers.webp); */
+  /* background-image: url(./images/rockline.webp); */
+  background-size:cover;
   width: 100%;
   height: 100%;
   display: flex;
@@ -19,12 +23,7 @@ html, body, #root{
 }
 
 
-.stone{
-  height: 20px;
-  width: 20px;
-  border-radius: 25px;
-  margin: 20px;
-}
+
 
 p{
   font-size: 25px;
