changed background on board component

--- a/src/components/board/Board.css
+++ b/src/components/board/Board.css
@@ -3,7 +3,8 @@
     border-radius: 12px;
     display: flex;
     padding: 20px;
-    background-image: url(../../images/woodboard.jpg);
+    /* background-image: url(../../images/woodboard.jpg); */
+    background-image: url(../../images/woodenBoard2.jpg);
     background-size: cover;
     height: 350px;
 }
