feat(start Screen):added background options and images for background

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ html, body, #root{
 }
 
 .app{
-  background-image: url(./images/Bigstock-22321633-Spa-still-life-with-bamboo-fountain-and-zen-stone.jpg);
+  /* background-image: url(./images/Bigstock-22321633-Spa-still-life-with-bamboo-fountain-and-zen-stone.jpg); */
   /* background-image: url(./images/sandrocks.webp); */
   /* background-image: url(./images/flowers.webp); */
   /* background-image: url(./images/rockline.webp); */
